--- a/index.html
+++ b/index.html
@@ -84,13 +84,13 @@
                         <i class="fa-solid fa-crop"></i>
                         <h2>UI/UX Design</h2>
                         <p>I craft intuitive, engaging interfaces that enhance user experiences. Using research, aesthetics, and usability principles, I create stunning designs, from wireframes to prototypes, ensuring seamless and impactful interactions.</p>
-                        <a href="#">Learn more</a>
+                        <a href="https://github.com/muditsultania/E-Commerce">Learn more</a>
                     </div>
                     <div>
                         <i class="fa-solid fa-flask"></i>
                         <h2>Data Science & AI/ML</h2>
                         <p>I leverage data to create intelligent solutions, from analyzing insights to deploying AI/ML models. I specialize in predictive modeling, automation, and decision-making systems to drive impactful results.</p>
-                        <a href="#">Learn more</a>
+                        <a href="https://github.com/muditsultania/Audio-Deepfake-detection">Learn more</a>
                     </div>
                     
                 </div>
@@ -107,21 +107,21 @@
                     <div class="layer">
                         <h3>Social Media App</h3>
                         <p>The app connects you to the talented people around the world. Download it from the play store.</p>
-                        <a href="#"><i class="fa-solid fa-link"></i></a>
+                        <a href="https://github.com/muditsultania"><i class="fa-solid fa-link"></i></a>
                     </div>
                 </div>
                 <div class="work">
                     <img src="Images/work-2.png" > <div class="layer">
                         <h3>Music App</h3>
                         <p>The app connects you to the talented people around the world. Download it from the play store.</p>
-                        <a href="#"><i class="fa-solid fa-link"></i></a>
+                        <a href="https://github.com/muditsultania"><i class="fa-solid fa-link"></i></a>
                     </div>
                 </div>        
                 <div class="work">
                     <img src="Images/work-3.png" > <div class="layer">
                         <h3>Online Shopping App</h3>
                         <p>The app connects you to the talented people around the world. Download it from the play store.</p>
-                        <a href="#"><i class="fa-solid fa-link"></i></a>
+                        <a href="https://e-commerce-rho-murex.vercel.app/"><i class="fa-solid fa-link"></i></a>
                     </div>
                 </div>
             </div>
